[package]
name = "comp-graph-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comp_graph = { path = "comp_graph" }
comp_graph_macro = { path = "comp_graph_macro" }
inventory = "0.3.1"
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
