[package]
name = "comp_graph_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
comp_graph = { path = "../comp_graph" }
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"

